attendee and speaker
