# routes/api.php
@@ -8,16 +8,13 @@ Route::group(['namespace' => 'Api'] ,function (){
         Route::post('refresh', 'AuthController@refresh');
     });
 
-    Route::group(['middleware'=>['jwt.auth']],function (){
+    Route::group(['middleware'=>['jwt.auth','auth_type']],function (){
         Route::group(['prefix' => 'account'], function () {
             Route::get('/me','ProfileController@me');
             Route::post('/update','ProfileController@update')->name('api.account.update');
             Route::post('/update-password','ProfileController@updatePassword');
-
         });
-
         Route::get('/events','EventController@index');
-//        Route::get('/pharmacies/{pharmacy}','PharmacyController@singlePharmacy');
-
+        Route::get('/events/{event}','EventController@show');
     });
 });
